Fix centering for user stats in Overview (on mobile)

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -110,7 +110,7 @@
 
 .title-stats {
     margin-top: 0.5rem;
-    display: -webkit-box;
+    display: flex;
     max-width: 200px;
     color: #fff;
     line-height: 1.6;
@@ -118,6 +118,7 @@
     font-family: var(--font-family,CircularSp,CircularSp-Arab,CircularSp-Hebr,CircularSp-Cyrl,CircularSp-Grek,CircularSp-Deva,var(--fallback-fonts,sans-serif));
     flex-basis: fit-content;
     margin-block-end: 0;
+    justify-content: center;
 }
 
 .value-stats {
@@ -205,7 +206,7 @@ label {
     isolation: isolate;
     position: relative;
     display: flex;
-    justify-content: center;
+    text-align: -webkit-center;
 }
 
 .nav-justified .nav-item, .nav-justified>.nav-link {
